[tool.poetry]
name = "parser-pro"
version = "0.1.0"
description = "Parser-Pro is a powerful Python library designed to streamline the parsing and manipulation of JSON data, making it easier than ever to perform complex data operations."
authors = ["VinayPundhir <its.vinay.pundhir@gmail.com>"]
license = "MIT License"
readme = "README.md"
packages = [{include = "parser-pro"}]

[tool.poetry.dependencies]
python = "^3.10"
Jinja2 = "^3.1.2"
pytest = "^7.4.2"
pyyaml = "^6.0.1"
black = "^23.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
