[tool.poetry]
name = "parser_pro"
version = "0.1.0"
description = "Parser-Pro is a powerful Python library designed to streamline the parsing and manipulation of JSON data, making it easier than ever to perform complex data operations."
authors = ["VinayPundhir <its.vinay.pundhir@gmail.com>"]
license = "MIT License"
readme = "README.md"
packages = [{include = "parser_pro"}]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.4.2"
black = "^23.9.1"
sphinx = "^7.2.6"
sphinx-rtd-theme = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
